composer.json edited online with Bitbucket

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nupods/kernl-lib-wp",
+  "name": "nupods/kernl-theme-lib",
   "homepage": "https://assets.provost.northeastern.edu/kernl",
   "authors": [
     {
