--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,37 @@
 {
-  "name": "nupods/kernl-theme-lib",
-  "homepage": "https://assets.provost.northeastern.edu/kernl",
+  "name": "northeastern-web/kernl-theme-support",
+  "description": "Package of support classes for Northeastern University websites",
+  "keywords": [
+    "northeastern-web",
+    "support"
+  ],
+  "homepage": "https://github.com/northeastern-web/support",
+  "license": "MIT",
   "authors": [
     {
-      "name": "NU PODS",
-      "email": "provost-digital@northeastern.edu"
+      "name": "Northeastern Web Solutions",
+      "email": "websolutions@northeastern.edu",
+      "homepage": "https://northeastern.edu",
+      "role": "Developer"
     }
   ],
-  "support": {
-    "documentation": "https://assets.provost.northeastern.edu/kernl"
+  "require": {
+    "php": "^7.2"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^2.16"
   },
   "autoload": {
     "psr-4": {
-      "Kernl\\Lib\\": "src/"
+      "Northeastern\\Support\\": "src"
     }
   },
-  "require": {},
-  "require-dev": {
-    "squizlabs/php_codesniffer": "~3.0"
-  },
   "scripts": {
-    "test": [
-      "phpcs src --extensions=php --standard=PSR2"
-    ]
-  }
+    "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
